tests/scenarios/cancelled_step/question.txt
# -q with ERROR exits 2 (ERROR dominates over NEEDS_WORK)
$ ick run -q
-> bad_deps: ERROR
     error: Failed to parse: `-`
     ... (pass -v for complete message)
     ^
-> fix_header: NEEDS_WORK
     pyproject.toml +1
(exit status: 2)
